--- a/JNetworkingKit/Podfile
+++ b/JNetworkingKit/Podfile
@@ -2,13 +2,11 @@ platform :ios, '10.0'
 
 target 'JNetworkingKit' do
   use_frameworks!
-
-  pod 'SwiftyJSON', '~> 4.0'
 end
 
 target 'JNetworkingKitTests' do
   use_frameworks!
 
-  pod 'Quick', '~> 1.3'
-  pod 'Nimble', '~> 7.1.0'
+  pod 'Quick'
+  pod 'Nimble'
 end
