--- a/JNetworkingKit/Podfile
+++ b/JNetworkingKit/Podfile
@@ -7,6 +7,6 @@ end
 target 'JNetworkingKitTests' do
   use_frameworks!
 
-  pod 'Quick'
-  pod 'Nimble'
+  pod 'Quick', '~> 1.3.0'
+  pod 'Nimble', '~> 7.3.0'
 end
