--- a/JNetworkingKit/Podfile
+++ b/JNetworkingKit/Podfile
@@ -1,12 +1,21 @@
 platform :ios, '9.0'
+inhibit_all_warnings!
 
 target 'JNetworkingKit' do
   use_frameworks!
+
+  target 'JNetworkingKitTests' do
+    inherit! :search_paths
+
+    pod 'Quick', '~> 1.3.0'
+    pod 'Nimble', '~> 7.3.0'
+  end
 end
 
-target 'JNetworkingKitTests' do
-  use_frameworks!
-
-  pod 'Quick', '~> 1.3.0'
-  pod 'Nimble', '~> 7.3.0'
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+    end
+  end
 end
